freesia/manifests/echoserver/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echoserver

spec:
  routes:
  - kind: Rule
    match: Host(`echoserver.harvestasya.org`)
    priority: 10
    services:
    - name: echoserver
      port: http
    middlewares:
